login page ,add cart completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,10 +26,10 @@
             <p>Success Isn's Allways about greatness. it's about consistency.
                 consistent <br> hard work gains suces. Greathess will come.
             </p>
-            <a href="" class="btn">Explore Now &#8594;</a>
+            <a routerLink="/shopping" class="btn">Continue Shop &#8594;</a>
         </div>
         <div class="col-2">
-            <img src="./images/image1.png" alt="">
+            <img src="/assets/cashew.jpeg" alt="">
         </div>
     </div>
 </div>
@@ -40,412 +40,22 @@
     <div class="samall-container">
         <div class="row">
             <div class="col-3">
-                <img src="./images/category-1.jpg" alt="">
+                <img src="/assets/cashew2.jpg" alt="">
             </div>
             <div class="col-3">
-                <img src="./images/category-2.jpg" alt="">
+                <img src="/assets/cashew3.jpg" alt="">
             </div>
             <div class="col-3">
-                <img src="./images/category-3.jpg" alt="">
+                <img src="/assets/cashew4.jpg" alt="">
             </div>
         </div>
         
     </div>
    
 </div>
-<!----- feature proudct --------->
-<div class="samall-container">
-    <h2 class="title">Fatured Product</h2>
-    <div class="row">
-        <div class="col-4">
-            <img src="./images/product-1.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$40.00</p>
-        </div>
-
-
-        <div class="col-4">
-            <img src="./images/product-2.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$50.00</p>
-        </div>
-
-        <div class="col-4">
-            <img src="./images/product-3.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$55.00</p>
-        </div>
-
-
-        <div class="col-4">
-            <img src="./images/product-4.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$60.00</p>
-        </div>
-    </div>
-        <h2 class="title">Latest product</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="./images/product-5.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$40.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-6.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$50.00</p>
-            </div>
-    
-            <div class="col-4">
-                <img src="./images/product-7.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$55.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-8.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-            <img src="./images/product-1.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$40.00</p>
-        </div>
-
-
-        <div class="col-4">
-            <img src="./images/product-2.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$50.00</p>
-        </div>
-
-        <div class="col-4">
-            <img src="./images/product-3.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$55.00</p>
-        </div>
-
-
-        <div class="col-4">
-            <img src="./images/product-4.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$60.00</p>
-        </div>
-    </div>
-        <h2 class="title">Latest product</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="./images/product-5.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$40.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-6.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$50.00</p>
-            </div>
-    
-            <div class="col-4">
-                <img src="./images/product-7.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$55.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-8.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-9.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-10.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-11.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-12.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-         </div>
-    </div>
  
-<!----------Offer--------->
-<div class="offer">
-    <div class="samall-container">
-        <div class="row">
-            <div class="col-2">
-                <img src="./images/exclusive.png" class="offer-img">
-            </div>
-            <div class="col-2">
-                <p>Exclsively Available on RedStore</p>
-                <h1>Smart Band 4</h1>
-                <small>
-                    The Mi smart Band 4 Festures a 39.9% larger (the Mi Band 3)
-                    Amoled color full-touch
-                </small>
-                <a href="" class="btn">Buy Now &#8594;</a>
-            </div>
-        </div>
-    </div>
-</div>
 
-
-<!--------------testimonial------------>
-<div class="testimonial">
-    <div class="samall-container">
-        <div class="row">
-            <div class="col-3">
-                <i class="fa fa-quote-left" ></i>
-                <p>Lorem Ipsum Is Simply dummy text of the printing and 
-                    typesetting industry. Lorem Ipsum has been the 
-                    industry's standar dummy text evenr
-                </p>
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-                </div>
-                <img src="./images/user-1.png" alt="">
-                <h3>Mobel Joe</h3>
-            </div>
-            <div class="col-3">
-                <i class="fa fa-quote-left" ></i>
-                <p>Lorem Ipsum Is Simply dummy text of the printing and 
-                    typesetting industry. Lorem Ipsum has been the 
-                    industry's standar dummy text evenr
-                </p>
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-                </div>
-                <img src="./images/user-2.png" alt="">
-                <h3>Mobel Joe</h3>
-            </div>
-            <div class="col-3">
-                <i class="fa fa-quote-left" ></i>
-                <p>Lorem Ipsum Is Simply dummy text of the printing and 
-                    typesetting industry. Lorem Ipsum has been the 
-                    industry's standar dummy text evenr
-                </p>
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-                </div>
-                <img src="./images/user-3.png" alt="">
-                <h3>Mobel Joe</h3>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!---------barands--------->
-<div class="barands">
-    <div class="samall-container">
-        <div class="row">
-            <div class="col-5">
-                <img src="./images/logo-godrej.png" alt="">
-            </div>
-            <div class="col-5">
-                <img src="./images/logo-oppo.png" alt="">
-            </div>
-            <div class="col-5">
-                <img src="./images/logo-coca-cola.png" alt="">
-            </div>
-            <div class="col-5">
-                <img src="./images/logo-paypal.png" alt="">
-            </div>
-            <div class="col-5">
-                <img src="./images/logo-philips.png" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-
+ 
 
 <!---------Footer---------->
 <div class="fotter">
