signUp form ready

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -59,7 +59,7 @@
               <li><a (click)="userDropdown()" class="btn btn-default btn-sm "><span><i class="bi bi-person navbar__user"></i></span></a></li></a>
                 <ul *ngIf="userDrop" class="navbar__sublinks">
                     
-                  <li><a routerLink="/login" > Sign Up</a></li>
+                  <li><a routerLink="/login" >LogIn</a></li>
                   <li><a  >Log Out</a></li>
                   <li><a  >web designer</a></li>
                 </ul>
