--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
               <div class="col-12">
                 <div class="mb-4">
                   <h3>Sign in</h3>
-                  <p>Don't have an account? <a href="#!">Sign up</a></p>
+                  <p>Don't have an account? <a routerLink="/signUp" >Sign up</a></p>
                 </div>
               </div>
             </div>
@@ -61,7 +61,7 @@
             <div class="row">
               <div class="col-12">
                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
-                  <a href="#!">Forgot password</a>
+                  <a  >Forgot password</a>
                 </div>
               </div>
             </div>
