--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -26,7 +26,7 @@
             </div>
             <h4>{{products.productName}}</h4>
             <p><b>{{products.productCost|currency:'INR'}} </b>/ {{products.productWeight}}</p>
-            <p>{{products.productFlewer}}</p>
+            <p>{{products.productFlavour}}</p>
              <p>
                 <button  (click)="addToCart()" class="add-to-cart">
                     <div class="default">Add to cart</div>
