--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -28,9 +28,9 @@ body {
 	position: relative;
  
 	border-top: 5px solid $yellow;
-	-webkit-box-shadow: 10px 0 10px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 15px 0 40px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 10px 0 10px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+	box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.267);
     -webkit-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
     -webkit-transform: scale3d(1, 1, 1);
