--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 <section class="bg-primary py-3 py-md-5 py-xl-8">
   <div class="container">
     <div class="row gy-4 align-items-center">
-      <div class="col-12 col-md-6 col-xl-7">
+      <!-- <div class="col-12 col-md-6 col-xl-7">
         <div class="d-flex justify-content-center text-bg-primary">
           <div class="col-12 col-xl-9">
             <img class="img-fluid rounded mb-4" loading="lazy" src="./assets/img/bsb-logo-light.svg" width="245" height="80" alt="BootstrapBrain Logo">
@@ -17,7 +17,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="col-12 col-md-6 col-xl-5">
         <div class="card border-0 rounded-4">
           <div class="card-body p-3 p-md-4 p-xl-5">
@@ -58,6 +58,7 @@
                 </div>
               </div>
             </form>
+            
             <div class="row">
               <div class="col-12">
                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
@@ -65,11 +66,8 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-12">
-               
-              </div>
-            </div>
+
+  
           </div>
         </div>
       </div>
