--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <label for="City" ><b>City</b></label>
-                <input type="text" class="form-control input_field" name="Zip" id="zip" placeholder="City Name" required>
+                <input type="text" class="form-control input_field" name="city" id="city" placeholder="City Name" required>
 
                 <label for="zip" ><b>Pin-Code</b></label>
                 <input type="zip" class="form-control input_field" name="Zip" id="zip" placeholder="Postal-Code." required>
