search methos Apply

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
- 
+ \
+ <app-navbar></app-navbar>
 <!-- Login 9 - Bootstrap Brain Component -->
 <section class="bg-primary py-3 py-md-5 py-xl-8">
   <div class="container">
