--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,10 +5,10 @@ $primaryColor: #678da175;
 }
 
 .main-div{
-    background:linear-gradient(to right, #0a0a27, #7d7c7cf1),
-    // position: sticky;
-    // top: 0;
-    // z-index:1;
+    background:linear-gradient(to right, #0a0a27, #7d7c7cf1);
+    position: sticky;
+    top: 0;
+    z-index:1;
 
 }
 body {
