--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -1,4 +1,4 @@
- 
+<app-navbar (searchData)="getSearchData($event)"></app-navbar>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
 
 <!----- feature proudct --------->
 <div class="samall-container">
-    <h2 class="title">Fatured Product</h2>
+    <h2 class="title">Fatured Product </h2>
     <div class="row" >
-        <div  class="col-4" *ngFor="let products of latestProduct">
+        <div  class="col-4" *ngFor="let products of latestProduct |search:searchData">
             <img (click)="redirectBuyPage()"  src={{products.productImage}} alt="">
             <div class="rating">
                 <i class="fa fa-star" ></i>
